about.html updated

--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="icon" href="favicon.ico" />
+
     <link rel="stylesheet" href="main.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -56,7 +58,7 @@
         <span class="text-reset">Author Name(s)</span>
         <a
           class="text-reset"
-          href="https://github.com/imthomp/simon"
+          href="https://github.com/webprogramming260/simon-javascript"
           >Source</a
         >
       </div>
