--- a/scores.html
+++ b/scores.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scores</title>
     <link rel="icon" href="favicon.ico" />
+
     <link rel="stylesheet" href="main.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -44,26 +46,7 @@
             <th>Date</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>도윤 이</td>
-            <td>34</td>
-            <td>May 20, 2021</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
-          </tr>
-        </tbody>
+        <tbody id="scores"></tbody>
       </table>
     </main>
 
@@ -72,10 +55,12 @@
         <span class="text-reset">Author Name(s)</span>
         <a
           class="text-reset"
-          href="https://github.com/imthomp/simon"
+          href="https://github.com/webprogramming260/simon-javascript"
           >Source</a
         >
       </div>
     </footer>
+
+    <script src="scores.js"></script>
   </body>
 </html>
